--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.gamesforpeace</groupId>
 	<artifactId>TonguesPlugin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.6</version>
 	<packaging>jar</packaging>
 
 	<name>TonguesPlugin</name>
