Add permission checks to the Whisper command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,7 +13,7 @@ commands:
       When [language] is "?" the current setup language is displayed. When "none" is specified, language setup is cleared.
       Or
       /<command> [player] [language]
-      When a player name is specified, the command operates similarly, on another player. (This command can also be invoked from Console)
+      When a player name is specified, the command operates similarly, on another player. (This command can also be invoked from a non player)
   tongues.whisper:
     description: Whisper a message to nearby players
     permission: tongues.whisper
