--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 						<goals>
 							<goal>shade</goal>
 						</goals>
+						<configuration>
+			              <relocations>
+			                <relocation>
+			                  <pattern>com.memetix</pattern>
+			                  <shadedPattern>org.gamesforpeace.memetix</shadedPattern>
+			                </relocation>
+			              </relocations>
+			            </configuration>
 					</execution>
 				</executions>
 			</plugin>
