--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.gamesforpeace</groupId>
 	<artifactId>TonguesPlugin</artifactId>
-	<version>0.7</version>
+	<version>0.8</version>
 	<packaging>jar</packaging>
 
 	<name>TonguesPlugin</name>
@@ -51,7 +51,7 @@
 	</dependencies>
 
 	<build>
-		<plugins>
+		<plugins> 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -71,13 +71,38 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-			              <relocations>
-			                <relocation>
-			                  <pattern>com.memetix</pattern>
-			                  <shadedPattern>org.gamesforpeace.memetix</shadedPattern>
-			                </relocation>
-			              </relocations>
-			            </configuration>
+							<relocations>
+								<relocation>
+									<pattern>com.memetix</pattern>
+									<shadedPattern>org.gamesforpeace.memetix</shadedPattern>
+								</relocation>
+							</relocations>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<instrumentation>
+						<ignores>
+						</ignores>
+						<excludes>
+							<exclude>src/test/**/*.class</exclude>
+						</excludes>
+					</instrumentation>
+					<check>
+					</check>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>clean</goal>
+							<goal>instrument</goal>
+							<goal>cobertura</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -90,4 +115,19 @@
 			<url>http://repo.bukkit.org/content/groups/public/</url>
 		</repository>
 	</repositories>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
