OPEN - task 24: Create the Talk command http://github.com/yoadsn/TonguesPlugin/issues/issue/24
OPEN - task 25: Redirect global chat to the Talk command 
http://github.com/yoadsn/TonguesPlugin/issues/issue/25

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Tongues
 main: org.gamesforpeace.tongues.TonguesPlugin
-version: 0.8.0
+version: 0.9.0
 description: Tongues implements real time translation support for messages between players. Currently Chat and Whisper messages are supported.
 
 commands:
@@ -19,6 +19,17 @@ commands:
     permission: tongues.whisper
     aliases: whisper
     usage: /<command> <message>
+  tongues.talk:
+    description: Talks to other players in various ways
+    permission: tongues.talk
+    aliases: [talk, t]
+    usage: |
+      /<command> <message>
+      Will whisper the message to any players around you
+      /<command> <player name> <message>
+      Will send the message only to the specified player
+      /<command> * <message>
+      Will send the message to all players
 
 permissions:
   tongues.setlang:
@@ -32,4 +43,14 @@ permissions:
   tongues.whisper:
     description: Allows to whisper a message to other players nearby
     default: true
+  tongues.talk:
+    description: Allows to whisper to players or talk to a specific player
+    default: true
+    children:
+      tongues.whisper: true
+  tongues.talk.all:
+    description: Allows to talk to any player
+    default: op
+    children:
+      tongues.talk: true
      
