--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Tongues
 main: org.gamesforpeace.tongues.TonguesPlugin
-version: 1.3.0
+version: 1.4.0
 description: Tongues implements real time translation support for messages between players. Currently Chat and Whisper messages are supported.
 
 commands:
@@ -41,6 +41,33 @@ commands:
       Enables global chat listen (including whispers and translations)
       /<command> off
       Enables global chat listen (including whispers and translations)
+  tongues.groups:
+    description: Manages the chat groups.
+    permission: tounges.groups
+    aliases: [tg]
+    usage: |
+      /<command> add <group name> <player UUID>
+      Adds a player to a group (creates the group if it does not exist)
+      /<command> add * <player UUID>
+      Adds a player to all existing groups
+      /<command> remove <group name> <player UUID>
+      Removes a player from a group (delete the group if it becomes empty)
+      /<command> remove * <player UUID>
+      Removes a player from all group (delete the groups if they become empty)
+      /<command> remove <group name> *
+      Removes all players from a group (delete the group)
+      /<command> remove * *
+      Removes all players from all group (deletes all groups)
+      /<command> list
+      Not yet supported
+      /<command> list <group name>
+      Not yet supported
+      /<command> list * <player UUID>
+      Not yet supported
+      /<command> save
+      Not yet supported
+      /<command> reload
+      Not yet supported
 
 permissions:
   tongues.setlang:
@@ -66,4 +93,7 @@ permissions:
       tongues.talk: true
   tongues.listen:
     description: Allows listening to any chat on the server
+    default: op
+  tounges.groups:
+    description: Allows managing the chat groups
     default: op
