migrate translation services API

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,5 @@
 bingTranslation:
-  clientID: replace_with_your_client_id
-  secretKey: replace_with_your_secret_key
+  subscriptionKey: replace_with_your_client_id
 chatLogging:
   file:
     enabled: true
