--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.gamesforpeace</groupId>
 	<artifactId>TonguesPlugin</artifactId>
-	<version>1.4</version>
+	<version>1.5</version>
 	<packaging>jar</packaging>
 
 	<name>TonguesPlugin</name>
@@ -33,10 +33,9 @@
 			<version>1.7.9-R0.2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.memetix</groupId>
-			<artifactId>microsoft-translator-java-api</artifactId>
-			<version>0.6.2</version>
-			<type>jar</type>
+  			<groupId>io.github.firemaples</groupId>
+  			<artifactId>microsoft-translator-java-api</artifactId>
+  			<version>0.8.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -71,7 +70,7 @@
 					<minimizeJar>true</minimizeJar>
 					<artifactSet>
 						<includes>
-							<include>com.memetix:microsoft-translator-java-api</include>
+							<include>io.github.firemaples:microsoft-translator-java-api</include>
 							<include>com.google.code.gson:gson</include>
 							<include>com.logentries:logentries-appender</include>
 						</includes>
@@ -86,8 +85,8 @@
 						<configuration>
 							<relocations>
 								<relocation>
-									<pattern>com.memetix</pattern>
-									<shadedPattern>org.gamesforpeace.memetix</shadedPattern>
+									<pattern>io.github.firemaples</pattern>
+									<shadedPattern>org.gamesforpeace.firemaples</shadedPattern>
 								</relocation>
 								<relocation>
 									<pattern>com.google.code.gson</pattern>
